# itk-dreg

./: .gitignore  CONTRIBUTING.md  README.md  registration_interface.py
.github/workflows/: build-test-publish.yml  lint.yml  make-docs.yml  test-notebooks.yml  test.yml
docs/: acknowledgements.md  components.md  conf.py  contributing.md  develop.md  getting_started.md  index.md  usage.md
examples/: ElastixDeformableRegistration.ipynb  ElastixRegisterAndReduce.ipynb
neuroimage-dreg-app/: index.html  index.ts  package-lock.json  package.json  vite.config.js
src/: README.md  pyproject.toml
src/itk_dreg/: __init__.py  itk.py  register.py
src/itk_dreg/base/: __init__.py  image_block_interface.py  itk_typing.py  registration_interface.py
src/itk_dreg/block/: __init__.py  convert.py  dask.py  image.py
src/itk_dreg/elastix/: __init__.py  register.py  serialize.py  util.py
src/itk_dreg/reduce_dfield/: __init__.py  dreg.py  matrix_transform.py  transform.py  transform_collection.py
src/test/elastix/: test_elx_import.py  test_elx_integration.py  test_elx_serialize.py
src/test/itk_dreg/: test_block_interface.py  test_dreg_block_subdivide.py  test_import.py  test_scheduler.py  test_serialize.py
src/test/reduce_dfield/: test_integration.py  test_reduce_dfield.py  test_transform_collection.py
src/test/util/: mock.py
test/: test_import.py
test/elastix/: test_elx_serialize.py
test/itk_dreg/: test_dreg_block_subdivide.py  test_scheduler.py
test/reduce_dfield/: test_reduce_dfield.py  test_transform_collection.py
test/util/: mock.py
