[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itk-dreg"
authors = [
    {name = "Matt McCormick", email = "matt.mccormick@kitware.com"},
    {name = "Tom Birdsong", email = "tom.birdsong@kitware.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: C++",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
requires-python = ">=3.9"
dynamic = ["version"]
readme = "../README.md"
keywords = ['itk','InsightToolkit','registration', 'brain','distributed', 'dask']

dependencies = [
    'dask[distributed] >=2023.10.0',
    'itk >=5.4rc04',
    'numpy'
]

[project.urls]
Home = "https://itk-dreg.readthedocs.io/"
Source = "https://github.com/InsightSoftwareConsortium/itk-dreg"
Issues = "https://github.com/InsightSoftwareConsortium/issues"

[project.optional-dependencies]
test = [
    'itk-elastix>=0.19.2',
    'itk-ioomezarrngff>=0.3rc1',
    'nbmake',
    'pytest',
    'scipy>=1.11.3'
]

dev = [
    'black',
    'pytest'
]

doc = [
    'sphinx>=7.2.6',
    'sphinx-autobuild',
    'furo'
]

impl = [
    'itk-elastix>=0.19.2',
    'scipy>=1.11.3'
]

lightsheet = [
    'aind_ccf_alignment_experiments @ git+https://github.com/AllenNeuralDynamics/aind-ccf-alignment-experiments.git@756e846',
    's3fs',
    'zarr',
]

notebook = [
    'matplotlib',
    'itkwidgets[notebook]>=1.0a52',
    'graphviz',
]

[tool.ruff.lint]
extend-ignore = ["E501"]

[tool.hatch.version]
path = "itk_dreg/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = [
    'itk-elastix>=0.19.2',
    'scipy>=1.11.3',
    'itk-ioomezarrngff>=0.3rc1',
    'nbmake',
    'pytest',
]

[tool.hatch.envs.default.scripts]
test = [
    "pytest -vvv -s"
]

[tool.black]
line-length = 88
